2010-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (byte-compile-not-obsolete-vars): Define if not
	bound.
	(tramp-compat-copy-file): Add PRESERVE-SELINUX-CONTEXT.
	(tramp-compat-funcall): New defmacro.
	(tramp-compat-line-beginning-position)
	(tramp-compat-line-end-position)
	(tramp-compat-temporary-file-directory)
	(tramp-compat-make-temp-file, tramp-compat-file-attributes)
	(tramp-compat-copy-file, tramp-compat-copy-directory)
	(tramp-compat-delete-file, tramp-compat-delete-directory)
	(tramp-compat-number-sequence, tramp-compat-process-running-p)
	* tramp.el (top, with-progress-reporter)
	(tramp-rfn-eshadow-setup-minibuffer)
	(tramp-rfn-eshadow-update-overlay, tramp-handle-set-file-times)
	(tramp-handle-dired-compress-file, tramp-handle-shell-command)
	(tramp-completion-mode-p, tramp-check-for-regexp)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-compute-multi-hops, tramp-read-passwd, tramp-clear-passwd)
	(tramp-time-diff, tramp-coding-system-change-eol-conversion)
	(tramp-set-process-query-on-exit-flag, tramp-unload-tramp)
	* tramp-cmds.el (tramp-cleanup-all-connections)
	(tramp-reporter-dump-variable, tramp-load-report-modules)
	(tramp-append-tramp-buffers)
	* tramp-gvfs.el (tramp-gvfs-handle-file-selinux-context)
	* tramp-util.el (tramp-gud-file-name): Use it.

	* tramp-imap.el (top): Autoload `epg-make-context'.

2010-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top, with-progress-reporter): Use `symbol-function'
	inside `funcall'.

	* tramp-compat.el (tramp-compat-file-attributes)
	(tramp-compat-delete-file, tramp-compat-delete-directory): Handle
	only `wrong-number-of-arguments' error.

	* tramp-gvfs.el (tramp-gvfs-handle-copy-file): Fix typo.
	(tramp-gvfs-handle-file-selinux-context): Use `symbol-function'
	inside `funcall'.

2010-05-05  Michael Albinus  <michael.albinus@gmx.de>

	Add FORCE argument to `delete-file'.

	* tramp-compat.el (tramp-compat-delete-file): New defun.
