@@ -1,3 +1,12 @@
+2010-05-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-do-file-attributes-with-stat): Add space in
+	format string, in order to work around a bug in pdksh.  Reported
+	by Gilles Pion <gpion@lfdj.com>.
+	(tramp-handle-verify-visited-file-modtime): Do not send a command
+	when the connection is not established.
+	(tramp-handle-set-file-times): Simplify the check for utc.
+
 2010-05-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (byte-compile-not-obsolete-vars): Define if not
